--- a/package.json
+++ b/package.json
@@ -6,17 +6,29 @@
   "scripts": {
     "dev": "bun --hot src/index.ts",
     "start": "NODE_ENV=production bun src/index.ts",
-    "build": "bun run build.ts"
+    "build": "bun run build.ts",
+    "db:generate": "bunx drizzle-kit generate",
+    "db:migrate": "bun src/db/migrate.ts",
+    "db:studio": "bunx drizzle-kit studio"
   },
   "dependencies": {
     "@base-ui/react": "^1.2.0",
+    "@elysiajs/eden": "^1.4.8",
     "@fontsource-variable/inter": "^5.2.8",
+    "@libsql/client": "^0.17.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-router": "^1.163.2",
+    "@tanstack/react-router-devtools": "^1.163.2",
+    "arktype": "^2.1.29",
     "bun-plugin-tailwind": "^0.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.45.1",
+    "elysia": "^1.4.25",
+    "elysia-xml": "^0.0.2",
     "lucide-react": "^0.545.0",
     "react": "^19",
     "react-dom": "^19",
@@ -24,9 +36,11 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.4.4",
+    "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bun": "latest",
+    "drizzle-kit": "^0.31.9",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.4.0"
   }
